# simspine

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
assets/OpenSim_Setup/: IK_Setup.xml  Markers.xml  Model.osim  Scaling_Setup.xml
assets/OpenSim_Setup/Geometry/: block.vtp  bofoot.vtp  capitate_lvs.vtp  capitate_rvs.vtp  cerv1sm.vtp  cerv2sm.vtp  cerv3sm.vtp  cerv4sm.vtp  cerv5sm.vtp  cerv6sm.vtp  cerv7.vtp  femur_l.vtp  femur_r.vtp  fibula_l.vtp  fibula_r.vtp  foot.vtp  hamate_lvs.vtp  hamate_rvs.vtp  hat_jaw.vtp  hat_skull.vtp  hat_spine.vtp  humerus_lv.vtp  humerus_rv.vtp  index_distal_lvs.vtp  index_distal_rvs.vtp  index_medial_lvs.vtp  index_medial_rvs.vtp  index_proximal_lvs.vtp  index_proximal_rvs.vtp  jaw.vtp  l_bofoot.vtp  l_foot.vtp  l_patella.vtp  l_pelvis.vtp  little_distal_lvs.vtp  little_distal_rvs.vtp  little_medial_lvs.vtp  little_medial_rvs.vtp  little_proximal_lvs.vtp  little_proximal_rvs.vtp  (+67 more)
docs/: dataset.md
scripts/: create_dataset.sh
src/simspine/: serialize_dataset.py
src/simspine/data_generation/: 1_merge_predictions.py  2_scale_model.py  3_kinematics.py  4_simulate_markers.py  5_merge_simulation.py  6_filtering.py
tools/: preprocess_simspine.py
tools/visualization/: common.py  plot_distribution.py  visualize_markers.py
