[project]
name = "simspine"
version = "0.0.1"
description = "SIMSPINE: A Biomechanics-Aware Simulation Framework for 3D Spine Motion Annotation and Benchmarking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "ruff>=0.14.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
